force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/Additional_Access__c.field-meta.xml
<CustomField>
    <fullName>Additional_Access__c</fullName>
    <label>Additional Access</label>
    <type>TextArea</type>
</CustomField>