force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/Additional_Access_Required__c.field-meta.xml
<CustomField>
    <fullName>Additional_Access_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Additional Access Required?</label>
    <type>Checkbox</type>
</CustomField>