force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/Application_Type__c.field-meta.xml
<CustomField>
    <fullName>Application_Type__c</fullName>
    <label>Application Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Requirement_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>Confluence</fullName>
            </value>
            <value>
                <fullName>Cvent</fullName>
            </value>
            <value>
                <fullName>Webex</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Novell (Network)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>