force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/Applications_ST_Assigned_Date__c.field-meta.xml
<CustomField>
    <fullName>Applications_ST_Assigned_Date__c</fullName>
    <label>Applications ST Worked Date</label>
    <type>DateTime</type>
</CustomField>