force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/Asset_type__c.field-meta.xml
<CustomField>
    <fullName>Asset_type__c</fullName>
    <label>Asset type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Laptop</fullName>
            </value>
            <value>
                <fullName>Surface Pro</fullName>
            </value>
            <value>
                <fullName>Mobile phone</fullName>
            </value>
            <value>
                <fullName>iPad</fullName>
            </value>
            <value>
                <fullName>Desk phone headset</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>