force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/BMCRF_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>BMCRF_Approval_Status__c</fullName>
    <description>Field store Approval Status  - Rejected/Accepted</description>
    <label>Approval Status~</label>
    <length>255</length>
    <type>Text</type>
</CustomField>