force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/BMCRF_Category_Level__c.field-meta.xml
<CustomField>
    <fullName>BMCRF_Category_Level__c</fullName>
    <formula>BMCServiceDesk__FKCategory__r.BMCServiceDesk__parentTree__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Category Level</label>
    <type>Text</type>
</CustomField>