force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/BMCRF_Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>BMCRF_Closed_Date__c</fullName>
    <formula>BMCServiceDesk__closeDateTime__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Closed Date</label>
    <type>DateTime</type>
</CustomField>