force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/BMCRF_Closure_Code_Incident__c.field-meta.xml
<CustomField>
    <fullName>BMCRF_Closure_Code_Incident__c</fullName>
    <label>Closure Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No user response</fullName>
            </value>
            <value>
                <fullName>Out of scope</fullName>
            </value>
            <value>
                <fullName>Resolved successfully</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Unable to replicate</fullName>
            </value>
            <value>
                <fullName>Not an Incident</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Problem Raised</fullName>
            </value>
            <value>
                <fullName>Request completed</fullName>
                <isActive>false</isActive>
                <label>Request completed</label>
            </value>
            <value>
                <fullName>Request rejected</fullName>
                <isActive>false</isActive>
                <label>Request rejected</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>