force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/BMCRF_Closure_Code_SR__c.field-meta.xml
<CustomField>
    <fullName>BMCRF_Closure_Code_SR__c</fullName>
    <label>Closure Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No user Response</fullName>
            </value>
            <value>
                <fullName>Out of Scope</fullName>
            </value>
            <value>
                <fullName>Request completed</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Request rejected</fullName>
            </value>
            <value>
                <fullName>Not a Request</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Cancelled by Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>