force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/BMCRF_Conatct_First_Name__c.field-meta.xml
<CustomField>
    <fullName>BMCRF_Conatct_First_Name__c</fullName>
    <label>Contact First Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>