force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/BMCRF_Concatenated_Field__c.field-meta.xml
<CustomField>
    <fullName>BMCRF_Concatenated_Field__c</fullName>
    <label>Concatenated Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>