force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/BMCRF_Considering_Business_Hours__c.field-meta.xml
<CustomField>
    <fullName>BMCRF_Considering_Business_Hours__c</fullName>
    <formula>IF(MOD(DATEVALUE(BMCRF_Resolved_Date__c+3) - DATE(1900, 1, 6), 7) = 0, BMCRF_Resolved_Date__c+5, 
IF(MOD(DATEVALUE(BMCRF_Resolved_Date__c+3) - DATE(1900, 1, 6), 7) = 1, BMCRF_Resolved_Date__c+5, 
IF(MOD(DATEVALUE(BMCRF_Resolved_Date__c) -  DATE(2013, 1,6),7)= 5, BMCRF_Resolved_Date__c+5,BMCRF_Resolved_Date__c+3) ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Considering Business Days For AutoClose</label>
    <type>DateTime</type>
</CustomField>