force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/BMCRF_Console_Resolved_Date__c.field-meta.xml
<CustomField>
    <fullName>BMCRF_Console_Resolved_Date__c</fullName>
    <formula>BMCRF_Resolved_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Resolved Date</label>
    <type>DateTime</type>
</CustomField>