force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/BMCRF_Contact_Application_ID__c.field-meta.xml
<CustomField>
    <fullName>BMCRF_Contact_Application_ID__c</fullName>
    <label>Application ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>