force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/BMCRF_Contact_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>BMCRF_Contact_Email_Address__c</fullName>
    <label>Contact Email Address</label>
    <type>Email</type>
</CustomField>