force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/BMCRF_Contact_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>BMCRF_Contact_Last_Name__c</fullName>
    <label>Contact Last Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>