force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/BMCRF_Contact_Mobile_No__c.field-meta.xml
<CustomField>
    <fullName>BMCRF_Contact_Mobile_No__c</fullName>
    <label>Contact Mobile No</label>
    <length>50</length>
    <type>Text</type>
</CustomField>