force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/BMCRF_Contact_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>BMCRF_Contact_Phone_Number__c</fullName>
    <label>Contact Phone Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>