force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/BMCRF_Division_Manager_Location__c.field-meta.xml
<CustomField>
    <fullName>BMCRF_Division_Manager_Location__c</fullName>
    <label>Division Manager Location</label>
    <length>25</length>
    <type>Text</type>
</CustomField>