force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/BMCRF_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>BMCRF_Due_Date__c</fullName>
    <formula>BMCServiceDesk__dueDateTime__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Target Date</label>
    <type>DateTime</type>
</CustomField>