force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/BMCRF_EA_Member_Number__c.field-meta.xml
<CustomField>
    <fullName>BMCRF_EA_Member_Number__c</fullName>
    <label>EA Member Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>