force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/BMCRF_isRejected__c.field-meta.xml
<CustomField>
    <fullName>BMCRF_isRejected__c</fullName>
    <defaultValue>false</defaultValue>
    <description>set to true if approval got rejected</description>
    <label>isRejected</label>
    <type>Checkbox</type>
</CustomField>