force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/BMCRF_New_Employee_Assets__c.field-meta.xml
<CustomField>
    <fullName>BMCRF_New_Employee_Assets__c</fullName>
    <description>Used in Approval process for New Employee</description>
    <label>New Employee Assets</label>
    <length>100</length>
    <type>Text</type>
</CustomField>