force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/BMCRF_Note_Added__c.field-meta.xml
<CustomField>
    <fullName>BMCRF_Note_Added__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to track if new note got added</description>
    <label>Note Added</label>
    <referenceTo>BMCServiceDesk__IncidentHistory__c</referenceTo>
    <relationshipLabel>Incidents</relationshipLabel>
    <relationshipName>Incidents</relationshipName>
    <type>Lookup</type>
</CustomField>