force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/BMCRF_Opened_date__c.field-meta.xml
<CustomField>
    <fullName>BMCRF_Opened_date__c</fullName>
    <formula>BMCServiceDesk__openDateTime__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opened date</label>
    <type>DateTime</type>
</CustomField>