force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/BMCRF_Related_Case__c.field-meta.xml
<CustomField>
    <fullName>BMCRF_Related_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Field used to store case related to an incident</description>
    <label>Related Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Incidents</relationshipLabel>
    <relationshipName>Incidents</relationshipName>
    <type>Lookup</type>
</CustomField>