force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/BMCRF_Related_Case_Formula__c.field-meta.xml
<CustomField>
    <fullName>BMCRF_Related_Case_Formula__c</fullName>
    <formula>BMCRF_Related_Case__r.CaseNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Case</label>
    <type>Text</type>
</CustomField>