force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/BMCRF_Resolved_Date__c.field-meta.xml
<CustomField>
    <fullName>BMCRF_Resolved_Date__c</fullName>
    <label>Resolved Date</label>
    <type>DateTime</type>
</CustomField>