force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/BMCRF_Responded_Date__c.field-meta.xml
<CustomField>
    <fullName>BMCRF_Responded_Date__c</fullName>
    <formula>BMCServiceDesk__respondedDateTime__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Response Date</label>
    <type>DateTime</type>
</CustomField>