force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/BMCRF_Status_Clone__c.field-meta.xml
<CustomField>
    <fullName>BMCRF_Status_Clone__c</fullName>
    <label>Status Clone</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>REOPEN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>