force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/BMCRF_Status_For_Approval__c.field-meta.xml
<CustomField>
    <fullName>BMCRF_Status_For_Approval__c</fullName>
    <label>Status For Approval</label>
    <length>255</length>
    <type>Text</type>
</CustomField>