force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/BMCRF_Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>BMCRF_Sub_Category__c</fullName>
    <label>Sub Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>