force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/BMCRF_Submitted_for_Approval__c.field-meta.xml
<CustomField>
    <fullName>BMCRF_Submitted_for_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Submitted for Approval</label>
    <type>Checkbox</type>
</CustomField>