force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/BMCRF_Type_Of_VPN_Access__c.field-meta.xml
<CustomField>
    <fullName>BMCRF_Type_Of_VPN_Access__c</fullName>
    <label>Type Of VPN Access</label>
    <length>20</length>
    <type>Text</type>
</CustomField>