force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/BMCServiceDesk__call__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__call__c</fullName>
    <inlineHelpText>This field is automatically incremented by 1 when you choose the Increment Call Counter command of the Actions menu. This field allows you to track the number of times an incident&#39;s client has called the service desk.</inlineHelpText>
    <label>Call Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>