force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/BMCServiceDesk__Categorization_Mode__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Categorization_Mode__c</fullName>
    <label>Categorization Mode</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Automatic</fullName>
            </value>
            <value>
                <fullName>Suggested</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>