force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/BMCServiceDesk__dueDateTime__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__dueDateTime__c</fullName>
    <inlineHelpText>This field is automatically set to the date and time at which the incident should be completed based on the priority&#39;s duration. If required, you can use this field to select a different due date from the calculated due date.</inlineHelpText>
    <label>Due Date</label>
    <type>DateTime</type>
</CustomField>