force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/BMCServiceDesk__FKCategory__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKCategory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>From the list of options, select the incident&#39;s category. Categories allow you to classify the incident using standard classifications, which can be easily tracked for reporting purposes.</inlineHelpText>
    <label>Category</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>BMCServiceDesk__Category__c.BMCServiceDesk__inactive__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <filterItems>
            <field>BMCServiceDesk__Category__c.BMCServiceDesk__AvailableForIncidents__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <infoMessage>Select an active category for the incident/ service request.</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>BMCServiceDesk__Category__c</referenceTo>
    <relationshipLabel>Incidents</relationshipLabel>
    <relationshipName>Incidents</relationshipName>
    <type>Lookup</type>
</CustomField>