force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/BMCServiceDesk__FKImpact__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKImpact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>From the list of options, select the incident&#39;s level of impact. The level of impact and the urgency are used to calculate the priority of the incident.</inlineHelpText>
    <label>Impact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>BMCServiceDesk__Impact__c.BMCServiceDesk__inactive__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <infoMessage>Select an active impact.</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>BMCServiceDesk__Impact__c</referenceTo>
    <relationshipLabel>Incidents</relationshipLabel>
    <relationshipName>Incidents</relationshipName>
    <type>Lookup</type>
</CustomField>