force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/BMCServiceDesk__FKRequestDefinition__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKRequestDefinition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select the request definition that you want to use to create a service request.</inlineHelpText>
    <label>Request Definition</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(8 OR 1) AND (2 AND 3) AND ((4 OR 5) AND (6 OR 7))</booleanFilter>
        <filterItems>
            <field>$Source.BMCServiceDesk__FKCategory__c</field>
            <operation>equals</operation>
            <valueField>BMCServiceDesk__SRM_RequestDefinition__c.BMCServiceDesk__FKCategory__c</valueField>
        </filterItems>
        <filterItems>
            <field>BMCServiceDesk__SRM_RequestDefinition__c.BMCServiceDesk__Online__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>BMCServiceDesk__SRM_RequestDefinition__c.BMCServiceDesk__Inactive__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <filterItems>
            <field>BMCServiceDesk__SRM_RequestDefinition__c.BMCServiceDesk__StartDate__c</field>
            <operation>equals</operation>
            <value/>
        </filterItems>
        <filterItems>
            <field>BMCServiceDesk__SRM_RequestDefinition__c.BMCServiceDesk__StartDate__c</field>
            <operation>lessOrEqual</operation>
            <valueField>BMCServiceDesk__SRM_RequestDefinition__c.BMCServiceDesk__CurrentDate__c</valueField>
        </filterItems>
        <filterItems>
            <field>BMCServiceDesk__SRM_RequestDefinition__c.BMCServiceDesk__EndDate__c</field>
            <operation>equals</operation>
            <value/>
        </filterItems>
        <filterItems>
            <field>BMCServiceDesk__SRM_RequestDefinition__c.BMCServiceDesk__EndDate__c</field>
            <operation>greaterOrEqual</operation>
            <valueField>BMCServiceDesk__SRM_RequestDefinition__c.BMCServiceDesk__CurrentDate__c</valueField>
        </filterItems>
        <filterItems>
            <field>$Source.BMCServiceDesk__FKCategory__c</field>
            <operation>equals</operation>
            <value/>
        </filterItems>
        <infoMessage>Select an active request definition.</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>BMCServiceDesk__SRM_RequestDefinition__c</referenceTo>
    <relationshipLabel>Incidents</relationshipLabel>
    <relationshipName>Incidents</relationshipName>
    <type>Lookup</type>
</CustomField>