force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/BMCServiceDesk__Impact_Id__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Impact_Id__c</fullName>
    <formula>BMCServiceDesk__FKImpact__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>From the list of options, select the incident&#39;s level of impact. The level of impact and the urgency are used to calculate the priority of the incident.</inlineHelpText>
    <label>Impact~</label>
    <type>Text</type>
</CustomField>