force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/BMCServiceDesk__inc_console_detail_link__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__inc_console_detail_link__c</fullName>
    <description>To be used in Service Cloud Console</description>
    <formula>HYPERLINK(&quot;/apex/BMCServiceDesk__IncidentConsole?record_name=&quot;&amp; Name &amp;&quot;&amp;record_id=&quot; &amp; Id &amp; &quot;&amp;isdtp=vw&amp;isServiceCloudConsole=true&quot;,Name, &quot;_blank&quot;)</formula>
    <label>Incident #+</label>
    <type>Text</type>
</CustomField>