force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/BMCServiceDesk__IncidentType__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__IncidentType__c</fullName>
    <label>Incident Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Complaint</fullName>
            </value>
            <value>
                <fullName>Compliment</fullName>
            </value>
            <value>
                <fullName>Incident</fullName>
            </value>
            <value>
                <fullName>Information Request</fullName>
            </value>
            <value>
                <fullName>Out of Scope</fullName>
            </value>
            <value>
                <fullName>Request for Change</fullName>
            </value>
            <value>
                <fullName>Service Request</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>