force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/BMCServiceDesk__New_Incident__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__New_Incident__c</fullName>
    <formula>IF (BMCServiceDesk__Is_New_Record__c, IMAGE(&quot;/resource/BMCServiceDesk__SDEFStyles/SDEFbuttons/newIncident_icon_16.png&quot;,  $Label.bmcservicedesk__new_incident, 16, 16), &#39;&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates if the incident is a new incident.</inlineHelpText>
    <label>New Incident</label>
    <type>Text</type>
</CustomField>