force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/BMCServiceDesk__RF_Attachments__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__RF_Attachments__c</fullName>
    <formula>IF (BMCServiceDesk__RF_HasAttachments__c&gt;0,IMAGE(&quot;/resource/BMCServiceDesk__SDEFStyles/SDEFicons/paperclip.svg&quot;, $Label.bmcservicedesk__attachments, 15, 15), &#39;&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attachments</label>
    <type>Text</type>
</CustomField>