force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/BMCServiceDesk__VIP_Client__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__VIP_Client__c</fullName>
    <formula>IF(BMCServiceDesk__FKClient__r.BMCServiceDesk__VIP__c, IMAGE(&quot;/resource/BMCServiceDesk__SDEFStyles/SDEFbuttons/VIP_icon_16.png&quot;,  $Label.bmcservicedesk__vipclient, 16, 16), &#39;-&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates if the client is VIP.</inlineHelpText>
    <label>VIP Client</label>
    <type>Text</type>
</CustomField>