force-app/main/default/objects/BMCServiceDesk__Incident__c/fields/Business_Justiication__c.field-meta.xml
<CustomField>
    <fullName>Business_Justiication__c</fullName>
    <label>Business Justiication</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>